--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 100px) {
 .nav{
     justify-content: column;
     justify-content: left;
@@ -39,7 +39,7 @@
 }
 .content{
     font-size:5vw;
-    width:100vw;;
+    width:41vw;
     padding:0;
     border:10vw;
 
@@ -102,5 +102,8 @@ div text{
     background-color: black; 
     height:100%;
     width:100vw
+}
+.img{
+    height:10vw;
 }
 }
