--- a/responsive.css
+++ b/responsive.css
@@ -117,5 +117,10 @@
     .skill{
         margin-top: 0vh;
     }
+    /*.skill i{
+        padding: 0 62vw;
+        font-size:206vw;
+    }*/
+    
     }
     
