--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ html {
     align-items: center;
 }
 .parallax {
-    background-image: url("./6844457.jpg");
+    background-image: url("./clouds25.jpg");
     min-height: 600px;
     background-attachment: fixed;
     backface-visibility: hidden;
@@ -83,8 +83,8 @@ html {
 .font{
     font-size:200px;
     font-display: center;
-    font-family:ludica handwriting;
-    color: whitesmoke;
+    font-family:'Times New Roman', Times, serif;
+    color: rgb(174, 55, 113);
     text-align: center;
     text-decoration-line:underline;
 }
@@ -165,15 +165,13 @@ color: aliceblue;
     /* width: 10vw; */
     padding: 0 20px;
     font-size: 200px;
-
 }
-/* .skill li a{
-    display:inline-block;
-    justify-content: center;
-    justify-items: baseline;
-    justify-content: space-around;
-    margin:80px;
-} */
+.skill i:hover{
+    cursor: pointer;
+ transform:scaleX(-1) ;
+ color: #fdfefe;
+ transition-duration: 1s;
+}
 .img{
     height:300px;
 }
@@ -195,6 +193,7 @@ color: aliceblue;
 .contact li a{
     display:inline-block;
     justify-content: center;
+    color: #fdfefe;
      font-size:80px;
      margin: 50px;
     
@@ -202,6 +201,9 @@ color: aliceblue;
 .contact li:hover{
     cursor: pointer;
  transform:scaleX(-1) ;
- color: #fdfefe;
+ color: #aa3d79;
  transition-duration: 1s;
+}
+.thankyou{
+    padding: 400px 500px;
 }
